Modificacion cadena de conexión

--- a/ProyectoFinal_GarroFernando/appsettings.json
+++ b/ProyectoFinal_GarroFernando/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-ProyectoFinal_GarroFernando-0b5c8725-0383-4c9c-8401-892a2276e288;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=localhost;Database=ProyectoFinal_GarroFernando;Trusted_Connection=True;Encrypt=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
